@@ -4,6 +4,7 @@
 * Fix - Adding in the 'lsx_to_get_tour_itinerary_ids' to fix the order of the map IDS
 * Fix - Fixing the departure day not using the tours featured image.
 * Dev - Added in a filter 'lsx_to_maps_tour_connections' to allow 3rd party filters of the tour itinerary map connections.
+* Dev - Sanitizing widget fields.
 
 ### 1.4.0 - 19 December 2019
 * Dev - Added in a parameter to lsx_to_enquire_modal() to allow a form_id to be specified
